k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-app-deployment
  namespace: color-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color-app
  template:
    metadata:
      labels:
        app: color-app
    spec:
      containers:
      - name: color-app
        image: docker.io/jonathanvspotify/color-app:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config-volume
          mountPath: /config
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: config-volume
        configMap:
          name: color-details
          items:
          - key: shape-color.txt
            path: shape-color.txt
