k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-app-service
  namespace: color-app-ns
spec:
  selector:
    app: color-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

# Default type, suitable for access within the cluster
